--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <script src="https://d3js.org/d3.v4.min.js"></script>
     <!-- <script src="node_modules/lib/animated-scroll-to.js"></script> -->
 
@@ -26,7 +27,7 @@
             <label>Eadward Muybridge, 1887. Collotype Print from the series "Animal Locomotion."</label>
 
             <p>
-            Data for this project was extracted from a video, shot on a hand-held mobile device. The background image and stills in the UI are a composite of 120 frames selected from the set of roughly 16 thousand stills making up the video. Each frame can be seen in the final piece; frames are selected based on the climber’s completion of a single movement; eg. one of the climber’s limbs has moved from point A to point B. In a few cases, movements were obscured or difficult to parse; you can see these instances when multiple limbs move between images.
+            Data for this project was extracted from a video, shot on a hand-held mobile device. The background image and stills are a composite of 120 frames selected from the set of roughly 16 thousand stills making up the video. Each frame can be seen in the final piece; frames are selected based on the climber’s completion of a single movement; eg. one of the climber’s limbs has moved from point A to point B. In a few cases, movements were obscured or difficult to parse; you can see these instances when multiple limbs move between images.
             </p>
 
             <img src="images/about/logan_grid.png" title="The curated set of climb images (cropped).">
@@ -49,7 +50,8 @@
 
             <p>
             <b>Thank You:</b><br/>
-            Logan Cerelli-Lough, the climber in question, for his collaboration and patience
+            Logan Cerelli-Lough, the climber in question, for his collaboration and patience<br />
+            Tomas DeCarcer, Nathan Singhapok & Eric Petersen for their guidance and feedback
             </p>
 
             <p>
