--- a/index.html
+++ b/index.html
@@ -24,12 +24,25 @@
         <span onclick="mobileNav('#leftside', this)">Table</span>
     </div>
 
+    <div class="mobile" id="hamburger">
+        <img src="images/hamburger.svg" onclick="hamburger()"/>
+        <div id="hamburgerBun" onclick="hide('#hamburger>p')"></div>
+        <p>
+            The Climber In Motion<br/>
+            <a href="index.html">Climb</a><br/>
+            <a href="about.html">About</a><br/>
+            <br/>
+            <a href="http://www.rileyhoonan.com" target="new">&copy; 2020 Riley Hoonan</a>
+        </p>
+
+    </div>
+
     <div id="leftside">
 
         <div class="tablet" id="nav">
             <a href="index.html" id="climb">Climb</a>
             <a href="about.html" id="about">About</a>
-            <a href="rileyhoonan.com" id="cpright">&copy; 2020 Riley Hoonan</a>
+            <a href="http://www.rileyhoonan.com" id="cpright" target="new">&copy; 2020 Riley Hoonan</a>
         </div>
 
         <div class="header" style="border-right: 1px solid #262525">
@@ -79,6 +92,21 @@
 
             d3.selectAll('#mobileNav>*').style('text-decoration', 'none');
             elem.style['text-decoration'] = 'underline';
+
+            if (nav_id === '#leftside') {
+                hide('#hamburger');
+            } else {
+                show('#hamburger');
+            }
+        }
+
+        function hamburger() {
+            // when hamburger image is clicked
+            if (d3.select('#hamburger>p').style('display') === 'none') {
+                show('#hamburger>p');
+            } else {
+                hide('#hamburger>p');
+            }
         }
 
     </script>
