clear selection update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <div class="mobile" id="hamburger">
         <img src="images/hamburger.svg" onclick="hamburger()"/>
-        <div id="hamburgerBun" onclick="hide('#hamburger>p')"></div>
+        <div id="hamburgerBun" onclick="hide('#hamburger>p'); clearSelection();"></div>
         <p>
             The Climber In Motion<br/>
             <a href="index.html">Climb</a><br/>
